--- a/DevFinanças/css/style.css
+++ b/DevFinanças/css/style.css
@@ -205,6 +205,8 @@ td.expense {
 
   opacity: 0;
   visibility: hidden;
+
+  z-index: 999;
 }
 
 .modal-overlay.active {
@@ -216,6 +218,7 @@ td.expense {
   background: #F0F2f5;
   padding: 2.4rem; 
   position: relative;
+  z-index: 1;
 }
 
 #form {
